--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -89,7 +89,7 @@ header {
     border-radius: 30px;
     filter: blur(15px);
     position: absolute;
-    background-color: CornflowerBlue;
+    background-color: #fff500;
     height: 100%;
     width: 100%;
   }
@@ -148,15 +148,15 @@ section {
           left: 0;
           z-index: -100;
           border-radius: 30px;
-          filter: blur(10px);
+          filter: blur(15px);
           position: absolute;
           background-color: LemonChiffon;
           height: 100%;
           width: 100%;
-          @include p(transition, all 200ms ease);
+          @include p(transition, all 300ms ease);
         }
         &:hover .link-bg{
-          background-color: cornflowerblue;
+          background-color: #fff500;
         }
         h1,
         h2 {
@@ -169,3 +169,5 @@ section {
     }
   }
 }
+
+
