--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -6,13 +6,15 @@
 }
 
 @import "webfonts";
-$font-body: 30px;
+$font-body: 24px;
 $font-head: 18px;
-$font-subhead: 14px;
+$font-subhead: 18px;
 
 // General
 body {
   color: black;
+  font-family: "UniversLTPro-55Roman", Arial, Helvetica, sans-serif;
+  letter-spacing: 0.035em;
   padding: 0;
   margin: 0;
   font-size: $font-body;
@@ -28,23 +30,19 @@ h1 {
   font-size: $font-head;
   letter-spacing: 0.035em;
   font-weight: normal;
-  font-family: "UniversLTPro-55Roman", Arial, Helvetica, sans-serif;
-  font-weight: normal;
   margin: 5px 0;
 }
 
 h2 {
   font-size: $font-head;
   font-weight: normal;
-  font-family: "UniversLTPro-55Roman", Arial, Helvetica, sans-serif;
 }
 
 h3 {
   font-size: $font-subhead;
-  letter-spacing: 0.055em;
   margin: 0;
   font-weight: normal;
-  text-transform: uppercase;
+  // text-transform: uppercase;
   font-family: "UniversLTPro-55Roman", Arial, Helvetica, sans-serif;
 }
 
@@ -67,12 +65,12 @@ a {
 // Header
 header {
   z-index: 1000;
-  width: calc(50vw - 120px);
+  width: 30em;
   margin: 30px;
   text-align: center;
   cursor: pointer;
   color: #000;
-  padding: 30px;
+  padding: 30px 0;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
