--- a/assets/css/_webfonts.scss
+++ b/assets/css/_webfonts.scss
@@ -51,3 +51,5 @@
 	font-family: 'UniversLTPro-75Black';
 	src: url('webfonts/font.woff2') format('woff2'), url('webfonts/font.woff') format('woff');
   }
+@font-face{font-family:'Times Seven';src:url("webfonts/TimesNRSevenMTStd-4af786abc04740fc7d76be6a52aaa139c9e7c32ec71721b1fc652eaf522182b2.woff") format("woff"),url("/assets/TimesNRSevenMTStd-4d8e48bd25ad4829b41c773fccf5000970a2a2d070341d63ab9b1f0de214ee21.woff2") format("woff2");font-weight:normal;font-style:normal}
+@font-face{font-family:'Times Seven';src:url("webfonts/TimesNRSevenMTStd-Italic-86a4e5396492357eb2179953c7b7e771c4b206924f1e082e600a266b7d9f263f.woff") format("woff"),url("/assets/TimesNRSevenMTStd-Italic-9fda2145fb58fd665e62e901c5e3b18735c27c4d750c2e52755ccf27e2414644.woff2") format("woff2");font-weight:normal;font-style:italic}
