--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -6,9 +6,9 @@
 }
 
 @import "webfonts";
-$font-body: 24px;
+$font-body: 22px;
 $font-head: 18px;
-$font-subhead: 18px;
+$font-subhead: 16px;
 
 // General
 body {
@@ -30,7 +30,7 @@ h1 {
   font-size: $font-head;
   letter-spacing: 0.035em;
   font-weight: normal;
-  margin: 5px 0;
+  margin: 5px ;
 }
 
 h2 {
@@ -40,7 +40,8 @@ h2 {
 
 h3 {
   font-size: $font-subhead;
-  margin: 0;
+  // display: inline-block;
+  margin: 10px 10px 0;
   font-weight: normal;
   // text-transform: uppercase;
   font-family: "UniversLTPro-55Roman", Arial, Helvetica, sans-serif;
@@ -57,61 +58,59 @@ a {
 }
 
   p {
-    line-height: 1.4em;
+    line-height: 1.5em;
     margin: 0;
   }
 
 
 // Header
 header {
+  width: 100%;
+  max-width: 20em;
+  margin: 20px;
   z-index: 1000;
-  width: 30em;
-  margin: 30px;
   text-align: center;
-  cursor: pointer;
   color: #000;
-  padding: 30px 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   position: fixed;
-  border-radius: 10px;
   top: 0;
   left: 0;
   @include p(transition, all 200ms ease);
-
-  .bg {
-    top: 0;
-    left: 0;
-    z-index: -100;
+  div {
     border-radius: 30px;
-    filter: blur(15px);
-    position: absolute;
-    background-color: #fff500;
-    height: 100%;
-    width: 100%;
+    box-shadow: 0 0 5px 5px rgba(138, 138, 138, 0.10);
+    border: 1px solid rgb(225, 225, 225);
+    backdrop-filter: blur(10px);
+    background-color: rgba(255, 250, 205, 0.6);
+    padding: 20px 0;
+    @include p(transition, all 200ms ease);
+    &:hover {
+      box-shadow: 0 0 5px 5px rgba(255, 250, 205, 0.6);
+    }
   }
-
+  .span-2 {
+    grid-column: span 2;
+    
+  }
   h1.contact {
     display: block;
     margin: 10px;
-
-    &.first {
-      margin-top: 30px;
-    }
   }
   h1, h3 {
     line-height: 1em;
+    &.first {
+      margin-top: 30px;
+    }
   }
 }
 
 // Layout
 section {
   margin: 30px;
-  max-width: 30em;
+  font-family: "Times Seven", 'Times New Roman', Times, serif;
+  max-width: 34em;
   position: relative;
   &:first-of-type {
-    margin-top: 300px;
+    margin-top: 240px;
   }
   .bg {
     top: 0;
@@ -148,7 +147,7 @@ section {
           border-radius: 30px;
           filter: blur(15px);
           position: absolute;
-          background-color: LemonChiffon;
+          background-color: #fffacd;
           height: 100%;
           width: 100%;
           @include p(transition, all 300ms ease);
@@ -169,9 +168,9 @@ section {
 }
 
 
-@media screen and (max-width: 900px) {
+// @media screen and (max-width: 900px) {
 
-  header {
-    width: calc(100vw - 120px);
-  }
-}
+//   header {
+//     width: calc(100vw - 120px);
+//   }
+// }
