--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -28,40 +28,44 @@ body {
 
 h1 {
   font-size: $font-head;
+  font-family: "UniversLTPro-55Roman", Arial, Helvetica, sans-serif;
   letter-spacing: 0.035em;
   font-weight: normal;
-  margin: 5px ;
+  margin: 5px;
 }
 
 h2 {
-  font-size: $font-head;
+  font-size: $font-subhead;
+  font-family: "UniversLTPro-55Roman", Arial, Helvetica, sans-serif;
+  margin: 0;
   font-weight: normal;
 }
 
 h3 {
   font-size: $font-subhead;
-  // display: inline-block;
+  font-family: "UniversLTPro-55Roman", Arial, Helvetica, sans-serif;
   margin: 10px 10px 0;
   font-weight: normal;
-  // text-transform: uppercase;
-  font-family: "UniversLTPro-55Roman", Arial, Helvetica, sans-serif;
 }
 
 a {
-  text-decoration: underline;
+  text-decoration: none;
+  border-radius: 10px;
   color: black;
+  background-color: rgba(255, 250, 205, 0.6);
+  box-shadow: 0 0 5px 5px rgba(255, 250, 205, 0.6);
   cursor: pointer;
-  transition: all 0.3s;
+  @include p(transition, all 200ms ease);
   &:hover {
-    text-decoration: none;
+    background-color: rgba(138, 138, 138, 0.1);
+    box-shadow: 0 0 5px 5px rgba(138, 138, 138, 0.1);
   }
 }
 
-  p {
-    line-height: 1.5em;
-    margin: 0;
-  }
-
+p {
+  line-height: 1.5em;
+  margin: 0;
+}
 
 // Header
 header {
@@ -77,7 +81,7 @@ header {
   @include p(transition, all 200ms ease);
   div {
     border-radius: 30px;
-    box-shadow: 0 0 5px 5px rgba(138, 138, 138, 0.10);
+    box-shadow: 0 0 5px 5px rgba(138, 138, 138, 0.1);
     border: 1px solid rgb(225, 225, 225);
     backdrop-filter: blur(10px);
     background-color: rgba(255, 250, 205, 0.6);
@@ -89,84 +93,64 @@ header {
   }
   .span-2 {
     grid-column: span 2;
-    
   }
   h1.contact {
     display: block;
     margin: 10px;
   }
-  h1, h3 {
+  h1,
+  h3 {
     line-height: 1em;
     &.first {
       margin-top: 30px;
     }
+  }
+  a {
+    background-color: none;
   }
 }
 
 // Layout
 section {
   margin: 30px;
-  font-family: "Times Seven", 'Times New Roman', Times, serif;
+  font-family: "Times Seven", "Times New Roman", Times, serif;
   max-width: 34em;
   position: relative;
   &:first-of-type {
     margin-top: 240px;
   }
-  .bg {
-    top: 0;
-    left: 0;
-    z-index: -100;
-    border-radius: 30px;
-    filter: blur(15px);
-    position: absolute;
-    background-color: Gainsboro;
-    width: 100%;
-    height: 100%;
-  }
   &.projects {
-    margin: 100px 30px;
-    h1 {
+    h4 {
+      padding:  0 0 10px;
       text-align: center;
-      padding: 60px 0 30px;
+      border-bottom: 1px solid rgb(225, 225, 225);
+    }
+    h1 {
+      padding: 10px 0;
     }
     .link-block {
-      padding: 0 40px 60px;
-      display: flex;
-      flex-wrap: wrap;
+      padding: 0 0 20px;
       text-align: center;
-      justify-content: center;
       a {
-        margin: 10px;
         position: relative;
-        padding: 24px 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 20px 0 20px;
+        padding: 10px;
         text-decoration: none;
-        .link-bg {
-          top: 0;
-          left: 0;
-          z-index: -100;
-          border-radius: 30px;
-          filter: blur(15px);
-          position: absolute;
-          background-color: #fffacd;
-          height: 100%;
-          width: 100%;
-          @include p(transition, all 300ms ease);
-        }
-        &:hover .link-bg{
-          background-color: #fff500;
-        }
+        border-radius: 30px;
         h1,
         h2 {
           padding: 0;
           margin: 0;
           text-align: center;
-          line-height: 1.4em;
+          line-height: 1em;
         }
       }
     }
   }
 }
-
 
 // @media screen and (max-width: 900px) {
 
