--- a/surface-samples/assets/css/home.scss
+++ b/surface-samples/assets/css/home.scss
@@ -50,8 +50,8 @@ a {
   cursor: pointer;
   @include p(transition, all 200ms ease);
   &:hover {
-    background-color: #f3f2f0;
-    box-shadow: 0 0 5px 5px #f3f2f0;
+    background-color: rgba(138, 138, 138, 0.1);
+    box-shadow: 0 0 5px 5px rgba(138, 138, 138, 0.1);
   }
 }
 
@@ -112,38 +112,92 @@ header {
 section {
   margin: 30px;
   font-family: "Times Seven", "Times New Roman", Times, serif;
-  max-width: 34em;
   position: relative;
   &:first-of-type {
-    margin-top: 240px;
+    margin-top: 120px;
   }
   &:last-of-type {
     margin-top: 90px;
   }
-  &.projects {
-    h4 {
-      padding: 0 0 10px;
-      text-align: center;
-      border-bottom: 1px solid rgb(225, 225, 225);
-    }
-    h1 {
-      padding: 10px 0;
-      text-align: center;
-    }
-    .link-block {
-      padding: 0 0 20px;
-      text-align: center;
-      a {
-        line-height: 2em;
-        margin-right: 10px;
-        span {
-          font-size: $font-head;
-          font-family: "UniversLTPro-55Roman", Arial, Helvetica, sans-serif;
-          letter-spacing: 0.035em;
-          font-weight: normal;
-        }
+  p {
+
+    max-width: 34em;
+  }
+  h1 {
+    font-size: 30px;
+  }
+  h3 {
+    font-size: 24px;
+    margin: 5px 0 20px;
+  }
+  .link-block {
+    padding: 0 0 20px;
+    text-align: center;
+    a {
+      line-height: 2em;
+      margin-right: 10px;
+      span {
+        font-size: $font-head;
+        font-family: "UniversLTPro-55Roman", Arial, Helvetica, sans-serif;
+        letter-spacing: 0.035em;
+        font-weight: normal;
       }
     }
+  }
+}
+
+// Slideshow
+
+.controls {
+  top: 0;
+  left: 0;
+  z-index: 10;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  .prev {
+    height: 100%;
+    width: 50%;
+    cursor: w-resize;
+  }
+  .next{
+    height: 100%;
+    width: 50%;
+    cursor: e-resize;
+  }
+}
+
+.slider {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  height: 80vh;
+  width: 100%;
+  padding: 20px 0;
+  background-color: #f3f2f0;
+  box-shadow: 0 0 10px 10px #f3f2f0;
+  border-radius: 30px;
+  .slide {
+    height: 100%;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    &.show {
+      display: flex;
+    }
+    img {
+      height: 100%;
+      margin: 10px;
+      &.sm {
+        height: 60%;
+        margin: 40px;
+      }
+    }
+  }
+  &.active {
+    display: flex;
   }
 }
 
