--- a/surface-samples/assets/css/home.scss
+++ b/surface-samples/assets/css/home.scss
@@ -75,7 +75,7 @@ header {
   div {
     border-radius: 30px;
     box-shadow: 0 0 5px 5px rgba(138, 138, 138, 0.1);
-    border: 1px solid rgb(225, 225, 225);
+    border: 1px solid rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(10px);
     background-color: rgba(255, 250, 205, 0.6);
     padding: 20px 0;
