--- a/assets/css/_webfonts.scss
+++ b/assets/css/_webfonts.scss
@@ -48,7 +48,7 @@
 @font-face {font-family: 'UniversLTPro-55Roman';src: url('webfonts/2C3BE8_0_0.eot');src: url('webfonts/2C3BE8_0_0.eot?#iefix') format('embedded-opentype'),url('webfonts/2C3BE8_0_0.woff') format('woff'),url('webfonts/2C3BE8_0_0.ttf') format('truetype');}
 
 @font-face {
-	font-family: 'UniversLTPro-75Black';
+	font-family: 'UniversLTPro-45Light';
 	src: url('webfonts/font.woff2') format('woff2'), url('webfonts/font.woff') format('woff');
   }
 @font-face{font-family:'Times Seven';src:url("webfonts/TimesNRSevenMTStd-4af786abc04740fc7d76be6a52aaa139c9e7c32ec71721b1fc652eaf522182b2.woff") format("woff"),url("/assets/TimesNRSevenMTStd-4d8e48bd25ad4829b41c773fccf5000970a2a2d070341d63ab9b1f0de214ee21.woff2") format("woff2");font-weight:normal;font-style:normal}
