--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -7,20 +7,20 @@
 
 @import "webfonts";
 $font-body: 22px;
-$font-head: 18px;
-$font-subhead: 16px;
+$font-head: 16px;
+$font-subhead: 18px;
 
 // General
 body {
   color: black;
-  font-family: "UniversLTPro-55Roman", Arial, Helvetica, sans-serif;
+  font-family: "UniversLTPro-45Light", Arial, Helvetica, sans-serif;
   letter-spacing: 0.035em;
   padding: 0;
   margin: 0;
   font-size: $font-body;
   line-height: 1.4em;
   padding: 0;
-  letter-spacing: -0.01em;
+  letter-spacing: 0.01em;
   width: 100%;
   height: 100%;
   @include p(font-smoothing, antialiased);
@@ -28,7 +28,7 @@ body {
 
 h1 {
   font-size: $font-head;
-  font-family: "UniversLTPro-55Roman", Arial, Helvetica, sans-serif;
+  font-family: "UniversLTPro-45Light", Arial, Helvetica, sans-serif;
   letter-spacing: 0.035em;
   font-weight: normal;
   margin: 5px 0;
@@ -36,8 +36,8 @@ h1 {
 
 h3 {
   font-size: $font-subhead;
-  font-family: "UniversLTPro-55Roman", Arial, Helvetica, sans-serif;
-  margin: 10px 10px 0;
+  font-family: "UniversLTPro-45Light", Arial, Helvetica, sans-serif;
+  margin: 0;
   font-weight: normal;
 }
 
@@ -45,67 +45,75 @@ a {
   text-decoration: none;
   border-radius: 10px;
   color: black;
-  background-color: rgba(255, 250, 205, 0.6);
-  box-shadow: 0 0 5px 5px rgba(255, 250, 205, 0.6);
+  background-color: #FFFBDF;
+  box-shadow: 0 0 5px 5px #FFFBDF;
   cursor: pointer;
   @include p(transition, all 200ms ease);
   &:hover {
-    background-color: #f3f2f0;
-    box-shadow: 0 0 5px 5px #f3f2f0;
+    background-color: #f3f3f3;
+    box-shadow: 0 0 5px 5px #f3f3f3;
   }
 }
 
 p {
-  line-height: 1.5em;
+  line-height: 1.55em;
   margin: 0;
 }
 
-// Header
-header {
-  width: 100%;
-  max-width: 20em;
-  margin: 20px;
-  z-index: 1000;
-  text-align: center;
-  color: #000;
+ // Header
+
+header{
+  margin: 50px 20px;
+  display: flex;
+  flex-direction: row;
   position: fixed;
+  z-index: 1000;
   top: 0;
   left: 0;
-  @include p(transition, all 200ms ease);
-  div {
-    border-radius: 30px;
-    box-shadow: 0 0 5px 5px rgba(138, 138, 138, 0.1);
-    border: 1px solid rgba(0, 0, 0, 0.1);
+  .pill {
+    padding: 5px 20px;
+    box-shadow: 0 0 7px 7px #FFFBDF;
+    background-color: #FFFBDF;
+  // border: 1px solid #f3f3f3;
+  // backdrop-filter: blur(5px);
     backdrop-filter: blur(10px);
-    background-color: rgba(255, 250, 205, 0.6);
-    padding: 20px 0;
+    border-radius: 30px;
     @include p(transition, all 200ms ease);
-    &:hover {
-      box-shadow: 0 0 5px 5px rgba(255, 250, 205, 0.6);
+    &.nameplate {
+      z-index: 1001;
+      width: 360px;
+      display: flex;
+      flex-direction: row;
+      justify-content: left;
+      align-items: center;
+      margin-right: 30px;
+      &:hover {
+        cursor: pointer;
+        background-color: #f3f3f3;
+        box-shadow: 0 0 7px 7px #f3f3f3;
+      }
+      .menu {
+        margin-right: 30px;
+        .bar {
+          padding: 0;
+          width: 20px;
+          height: 1px;
+          background-color: #000;
+          margin: 6px 0;
+          border-radius: 2px;
+        }
+      }
+      h1 {
+        margin: 5px 0 3px;
+      }
+      
+    }
+    &.page-header {
+      background-color: #f3f3f3;
+        box-shadow: 0 0 7px 7px #f3f3f3;
     }
   }
-  .span-2 {
-    grid-column: span 2;
-  }
-  h1.contact {
-    display: block;
-    margin: 10px;
-  }
-  h1,
-  h3 {
-    line-height: 1em;
-    &.first {
-      margin-top: 30px;
-    }
-  }
-  a {
-    background-color: transparent;
-    box-shadow: none;
-    &:hover {
-      background-color: transparent;
-      box-shadow: none;
-    }
-  }
+
 }
 
 // Layout
@@ -114,12 +122,16 @@ section {
   font-family: "Times Seven", "Times New Roman", Times, serif;
   max-width: 34em;
   position: relative;
-  &:first-of-type {
-    margin-top: 240px;
+  &.intro {
+    p {
+      margin: 30px 0;
+      &:first-of-type {
+        margin-top: 160px;
+      }
+    }
   }
-  &:last-of-type {
-    margin-top: 90px;
-  }
+  
+
   &.projects {
     h4 {
       padding: 0 0 10px;
@@ -138,9 +150,27 @@ section {
         margin-right: 10px;
         span {
           font-size: $font-head;
-          font-family: "UniversLTPro-55Roman", Arial, Helvetica, sans-serif;
+          font-family: "UniversLTPro-45Light", Arial, Helvetica, sans-serif;
           letter-spacing: 0.035em;
           font-weight: normal;
+        }
+      }
+    }
+  }
+}
+
+.info-block {
+  margin: 60px 30px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  .contact-block {
+    .contact-row {
+      display: flex;
+      flex-direction: row;
+      h3 {
+        margin: 0 0 5px 0;
+        &.label {
+          width: 100px;
         }
       }
     }
