--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -13,12 +13,11 @@ $font-subhead: 18px;
 // General
 body {
   color: black;
-  font-family: "UniversLTPro-45Light", Arial, Helvetica, sans-serif;
-  letter-spacing: 0.035em;
+  font-family: "TimesTenLT-Roman", "Times New Roman", Times, serif;
   padding: 0;
   margin: 0;
   font-size: $font-body;
-  line-height: 1.4em;
+  line-height: 1.55em;
   padding: 0;
   letter-spacing: 0.01em;
   width: 100%;
@@ -29,13 +28,13 @@ body {
 h1 {
   font-size: $font-head;
   font-family: "UniversLTPro-45Light", Arial, Helvetica, sans-serif;
-  letter-spacing: 0.035em;
+  letter-spacing: 0.025em;
   font-weight: normal;
   margin: 5px 0;
 }
 
 h3 {
-  font-size: $font-subhead;
+  font-size: $font-head;
   font-family: "UniversLTPro-45Light", Arial, Helvetica, sans-serif;
   margin: 0;
   font-weight: normal;
@@ -63,7 +62,7 @@ p {
  // Header
 
 header{
-  margin: 50px 20px;
+  margin: 50px 30px;
   display: flex;
   flex-direction: row;
   position: fixed;
@@ -71,7 +70,11 @@ header{
   top: 0;
   left: 0;
   .pill {
-    padding: 5px 20px;
+    padding: 0 30px;
+    height: 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     box-shadow: 0 0 7px 7px #FFFBDF;
     background-color: #FFFBDF;
   // border: 1px solid #f3f3f3;
@@ -81,7 +84,6 @@ header{
     @include p(transition, all 200ms ease);
     &.nameplate {
       z-index: 1001;
-      width: 360px;
       display: flex;
       flex-direction: row;
       justify-content: left;
@@ -109,68 +111,48 @@ header{
       
     }
     &.page-header {
-      background-color: #f3f3f3;
-        box-shadow: 0 0 7px 7px #f3f3f3;
+      background-color: #fff;
+        box-shadow: 0 0 7px 7px #fff;
     }
   }
 
 }
 
 // Layout
-section {
-  margin: 30px;
-  font-family: "Times Seven", "Times New Roman", Times, serif;
-  max-width: 34em;
-  position: relative;
-  &.intro {
-    p {
-      margin: 30px 0;
-      &:first-of-type {
-        margin-top: 160px;
-      }
-    }
-  }
-  
 
-  &.projects {
-    h4 {
-      padding: 0 0 10px;
-      text-align: center;
-      border-bottom: 1px solid rgb(225, 225, 225);
-    }
-    h1 {
-      padding: 10px 0;
-      text-align: center;
-    }
-    .link-block {
-      padding: 0 0 20px;
-      text-align: center;
-      a {
-        line-height: 2em;
-        margin-right: 10px;
-        span {
-          font-size: $font-head;
-          font-family: "UniversLTPro-45Light", Arial, Helvetica, sans-serif;
-          letter-spacing: 0.035em;
-          font-weight: normal;
-        }
-      }
+.content {
+  margin: 160px 30px 20px;
+  min-height: calc(100vh - 180px);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  .intro {
+    p {
+      margin: 0 0 30px 0;
+      max-width: 34em;
     }
   }
 }
 
 .info-block {
-  margin: 60px 30px;
+  margin: 60px 0 0;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr ;
   .contact-block {
     .contact-row {
       display: flex;
       flex-direction: row;
       h3 {
-        margin: 0 0 5px 0;
+        margin: 0;
         &.label {
-          width: 100px;
+          margin-right: 10px;
+          width: 60px;
+        }
+        a {
+          margin-right: 20px;
+          background-color: white;
+          box-shadow: none;
+          text-decoration: underline;
         }
       }
     }
@@ -182,4 +164,4 @@ section {
 //   header {
 //     width: calc(100vw - 120px);
 //   }
-// }
+// }}
