--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -22,13 +22,13 @@ body {
   letter-spacing: 0.01em;
   width: 100%;
   height: 100%;
-  @include p(font-smoothing, antialiased);
 }
 
 h1 {
   font-size: $font-head;
   font-family: "UniversLTPro-45Light", Arial, Helvetica, sans-serif;
   letter-spacing: 0.025em;
+  line-height: 1em;
   font-weight: normal;
   margin: 5px 0;
 }
@@ -37,6 +37,7 @@ h3 {
   font-size: $font-head;
   font-family: "UniversLTPro-45Light", Arial, Helvetica, sans-serif;
   margin: 0;
+  line-height: 1em;
   font-weight: normal;
 }
 
@@ -44,8 +45,8 @@ a {
   text-decoration: none;
   border-radius: 10px;
   color: black;
-  background-color: #FFFBDF;
-  box-shadow: 0 0 5px 5px #FFFBDF;
+  background-color: #fff9d1;
+  box-shadow: 0 0 5px 5px #fff9d1;
   cursor: pointer;
   @include p(transition, all 200ms ease);
   &:hover {
@@ -59,9 +60,9 @@ p {
   margin: 0;
 }
 
- // Header
+// Header
 
-header{
+header {
   margin: 50px 30px;
   display: flex;
   flex-direction: row;
@@ -70,31 +71,30 @@ header{
   top: 0;
   left: 0;
   .pill {
-    padding: 0 30px;
-    height: 60px;
+    padding: 24px 30px;
+    // height: 60px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    box-shadow: 0 0 7px 7px #FFFBDF;
-    background-color: #FFFBDF;
-  // border: 1px solid #f3f3f3;
-  // backdrop-filter: blur(5px);
-    backdrop-filter: blur(10px);
+    box-shadow: 0 0 7px 7px #fff9d1;
+    background-color: #fff9d1;
     border-radius: 30px;
     @include p(transition, all 200ms ease);
     &.nameplate {
-      z-index: 1001;
-      display: flex;
-      flex-direction: row;
-      justify-content: left;
-      align-items: center;
       margin-right: 30px;
       &:hover {
         cursor: pointer;
         background-color: #f3f3f3;
         box-shadow: 0 0 7px 7px #f3f3f3;
       }
-      .menu {
+      .title {
+        z-index: 1001;
+        display: flex;
+        flex-direction: row;
+        justify-content: left;
+        align-items: center;
+      }
+      .menu-icon {
         margin-right: 30px;
         .bar {
           padding: 0;
@@ -108,14 +108,31 @@ header{
       h1 {
         margin: 5px 0 3px;
       }
-      
+      .menu {
+        display: none;
+        max-width: 100%;
+        width: 400px;
+        margin-top: 20px;
+        padding-top: 10px;
+        text-align: center;
+        border-top: 1px solid black;
+        a {
+          margin-top: 10px;
+          display: block;
+          font-family: "UniversLTPro-45Light", Arial, Helvetica, sans-serif;
+          font-size: $font-subhead;
+          background-color: transparent;
+          box-shadow: none;
+        }
+      }
     }
     &.page-header {
-      background-color: #fff;
-        box-shadow: 0 0 7px 7px #fff;
+      vertical-align: top;
+      background-color: transparent;
+      box-shadow: none;
+      justify-content: flex-start;
     }
   }
-
 }
 
 // Layout
@@ -136,12 +153,13 @@ header{
 
 .info-block {
   margin: 60px 0 0;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr ;
+  display: flex;
+  flex-direction: row;
   .contact-block {
     .contact-row {
       display: flex;
       flex-direction: row;
+      margin: 0 60px 10px 0;
       h3 {
         margin: 0;
         &.label {
@@ -153,6 +171,10 @@ header{
           background-color: white;
           box-shadow: none;
           text-decoration: underline;
+          @include p(transition, all 200ms ease);
+          &:hover {
+            text-decoration: none;
+          }
         }
       }
     }
