--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -94,20 +94,15 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    @include p(transition, all 400ms ease);
   }
   .nameplate {
     border-radius: 20px;
   }
   .menu-item {
     border-radius: 60px;
-    opacity: 0;
-    pointer-events: none;
-    cursor: auto;
-    &.show {
+    display: none;
+    &.fade {
       opacity: 1;
-      pointer-events: auto;
-      cursor: pointer;
     }
   }
   .menu-icon{
@@ -138,6 +133,7 @@ header {
 .menu-icon,
 .menu-item {
   &:hover {
+    @include p(transition, all 400ms ease);
     box-shadow: 0 0 10px 4px #e2e2e2;
     background-color: #e2e2e2;
     cursor: pointer;
@@ -149,11 +145,11 @@ header {
 .content {
   margin: 160px 30px 20px;
   min-height: calc(100vh - 180px);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  column-gap: 40px;
   .intro {
-
+    grid-column: span 3;
     p {
       margin: 0 0 30px 0;
       max-width: 34em;
@@ -162,14 +158,11 @@ header {
 }
 
 .info-block {
-  margin: 60px 0 0;
-  display: flex;
-  flex-direction: row;
   .contact-block {
     .contact-row {
       display: flex;
       flex-direction: row;
-      margin: 0 60px 10px 0;
+      margin-bottom: 10px;
       h3 {
         margin: 0;
         &.label {
