--- a/assets/css/_webfonts.scss
+++ b/assets/css/_webfonts.scss
@@ -46,10 +46,10 @@
 
 @font-face {
 	font-family: "UniversLTPro-45Light";
-	src: url('webFonts/UniversLTPro45Light/font.woff2') format('woff2'), url('webFonts/UniversLTPro45Light/font.woff') format('woff');
+	src: url('./webFonts/UniversLTPro45Light/font.woff2') format('woff2'), url('./webFonts/UniversLTPro45Light/font.woff') format('woff');
   }
   
 @font-face {
 	font-family: "TimesTenLT-Roman";
-	src: url('webFonts/TimesTenLTRoman/font.woff2') format('woff2'), url('webFonts/TimesTenLTRoman/font.woff') format('woff');
+	src: url('./webFonts/TimesTenLTRoman/font.woff2') format('woff2'), url('./webFonts/TimesTenLTRoman/font.woff') format('woff');
   }
