update w/o ds store

--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -193,8 +193,13 @@ header {
 }
 
 .info-block {
-  margin-top: 10px;
+  margin-top: auto;
+  grid-column: span 4;
+  column-gap: 40px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   .contact-block {
+    grid-column: span 1;
     margin-bottom: 20px;
     .contact-row {
       display: flex;
