--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -31,6 +31,9 @@ h1 {
   line-height: 1.3em;
   font-weight: normal;
   margin: 0;
+  &.mobile {
+    display: none;
+  }
 }
 
 h3 {
@@ -100,7 +103,7 @@ header {
     }
   }
   .menu-icon {
-    padding: 0;
+    padding: 0 !important;
     width: 80px;
     border-radius: 60px;
     .bar {
@@ -158,7 +161,8 @@ header {
     .img-wrapper {
       grid-column: span 3;
       margin: 20px 0 40px;
-      img, video {
+      img,
+      video {
         max-width: 100%;
       }
       // &.header {
@@ -172,7 +176,8 @@ header {
     column-gap: 40px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    img, video {
+    img,
+    video {
       grid-column: span 3;
       display: block;
       margin: 0 auto;
@@ -182,7 +187,7 @@ header {
     }
     h1 {
       grid-column: span 3;
-      margin: 0 0 20px
+      margin: 0 0 20px;
     }
     h3 {
       margin: 30px 0 40px;
@@ -197,10 +202,9 @@ header {
   grid-column: span 4;
   column-gap: 40px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns:minmax(200px, auto) 1fr 1fr 1fr 1fr;
   .contact-block {
     grid-column: span 1;
-    margin-bottom: 20px;
     .contact-row {
       display: flex;
       flex-direction: row;
@@ -231,7 +235,6 @@ header {
     font-size: 20px;
   }
 
-
   header {
     padding: 10px;
     width: calc(100vw - 20px);
@@ -242,25 +245,35 @@ header {
   .nameplate {
     height: 80px !important;
     padding: 0 20px !important;
-    // margin: 0 15px 15px 0 !important;
   }
 
-  .menu-icon, .nameplate {
-    width: 100% !important;
-  }
-  
   .content {
-    margin: 230px 20px 40px;
+    margin: 130px 20px 20px;
+    min-height: calc(100vh - 150px);
   }
 
+  .contact-block {
+    grid-column: span 4 !important;
+    margin-top: 20px;
+  }
   .info-block {
     grid-column: span 4;
   }
-
 
   .images img,
   .intro,
   h3 {
     grid-column: span 4 !important;
+  }
+}
+
+@media (max-width: 374px) {
+  h1 {
+    &.desktop {
+      display: none;
+    }
+    &.mobile {
+      display: block;
+    }
   }
 }
