--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -6,14 +6,14 @@
 }
 
 @import "webfonts";
-$font-body: 24px;
-$font-head: 16px;
-$font-subhead: 18px;
+$font-body: 22px;
+$font-head: 42px;
+$font-subhead: 16px;
 
 // General
 body {
   color: black;
-  font-family: "TimesTenLT-Roman", "Times New Roman", Times, serif;
+  font-family: "Dutch801BT-Roman", "Times New Roman", Times, serif;
   padding: 0;
   margin: 0;
   font-size: $font-body;
@@ -26,6 +26,18 @@ body {
 
 h1 {
   font-size: $font-head;
+  font-family: "Dutch801BT-RomanHeadline", "Times New Roman", Times, serif;
+  font-weight: normal;
+  letter-spacing: 0.025em;
+  text-align: center;
+  margin: 0 0 40px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+}
+
+h2 {
+  font-size: $font-subhead;
   font-family: "UniversLTPro-45Light", Arial, Helvetica, sans-serif;
   letter-spacing: 0.05em;
   line-height: 1.3em;
@@ -34,15 +46,6 @@ h1 {
   &.mobile {
     display: none;
   }
-}
-
-h3 {
-  font-size: $font-head;
-  letter-spacing: 0.035em;
-  font-family: "UniversLTPro-45Light", Arial, Helvetica, sans-serif;
-  margin: 0;
-  line-height: 1.5em;
-  font-weight: normal;
 }
 
 a {
@@ -64,14 +67,16 @@ p {
 }
 
 // Header
-
 header {
-  padding: 20px 30px;
-  width: calc(100vw - 60px);
+  padding: 20px 50px;
+  width: calc(100vw - 100px);
   position: fixed;
   z-index: 1000;
   top: 0;
   left: 0;
+  display: flex;
+    flex-direction: row;
+    justify-content: space-between;
   .menu {
     height: 100%;
     display: flex;
@@ -84,8 +89,7 @@ header {
   .nameplate {
     box-shadow: 0 0 10px 4px #fff9d1;
     background-color: #fff9d1;
-    padding: 0 30px;
-    margin: 10px;
+    padding: 0 25px;
     height: 80px;
     display: flex;
     flex-direction: column;
@@ -98,9 +102,6 @@ header {
   .menu-item {
     border-radius: 60px;
     display: none;
-    &.fade {
-      opacity: 1;
-    }
   }
   .menu-icon {
     padding: 0 !important;
@@ -131,43 +132,69 @@ header {
 .menu-item {
   &:hover {
     @include p(transition, all 400ms ease);
-    box-shadow: 0 0 10px 4px #e2e2e2;
-    background-color: #e2e2e2;
+    box-shadow: 0 0 10px 4px #ececec;
+    background-color: #ececec;
     cursor: pointer;
+  }
+}
+
+// Footer
+footer {
+  padding: 20px 30px;
+  z-index: 1000;
+  bottom: 0;
+  left: 0;
+  .link-menu {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
+    a,
+    div {
+      margin: 10px;
+      padding: 0 20px;
+      height: 40px;
+      border-radius: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0 0 10px 4px #ececec;
+      background-color: #ececec;
+      h2 {
+        margin-top: 2px;
+      }
+    }
+    a {
+      display: none;
+    }
+    .link-icon {
+      cursor: pointer;
+    }
   }
 }
 
 // Layout
 
 .content {
-  margin: 160px 50px 40px;
-  min-height: calc(100vh - 200px);
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  column-gap: 40px;
-  .intro {
-    grid-column: span 3;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    margin-bottom: 40px;
-    p {
-      margin: 0 0 30px 0;
-      max-width: 34em;
-    }
-    h3 {
-      margin: auto 0 10px;
-    }
-    .img-wrapper {
-      grid-column: span 3;
-      margin: 20px 0 40px;
-      img,
-      video {
-        max-width: 100%;
+  margin: 140px 50px 40px;
+  section {
+    &.head {
+      max-width: 880px;
+      margin-bottom: 30px;
+      img {
+        width: 100%;
+        max-width: 880px;
+        margin: 0 auto;
       }
-      // &.header {
-      //   margin: 20px 0 40px;
-      // }
+    }
+    &.body {
+      max-width: 880px;
+      p {
+        margin: 0 0 30px;
+        max-width: 700px;
+      }
     }
   }
   .images {
@@ -202,7 +229,7 @@ header {
   grid-column: span 4;
   column-gap: 40px;
   display: grid;
-  grid-template-columns:minmax(200px, auto) 1fr 1fr 1fr 1fr;
+  grid-template-columns: minmax(200px, auto) 1fr 1fr 1fr 1fr;
   .contact-block {
     grid-column: span 1;
     .contact-row {
