Revert "some update"
This reverts commit 41b0fd4de395f1352f007584b5d59d5e4ffb2248.

--- a/assets/css/_webfonts.scss
+++ b/assets/css/_webfonts.scss
@@ -1,6 +1,6 @@
 /**
  * @license
- * MyFonts Webfont Build ID 4028379, 2021-03-17T21:43:10-0400
+ * MyFonts Webfont Build ID 4025585, 2021-03-10T16:56:05-0500
  * 
  * The fonts listed in this notice are subject to the End User License
  * Agreement(s) entered into by the website owner. All other parties are 
@@ -8,13 +8,9 @@
  * 
  * You may obtain a valid license at the URLs below.
  * 
- * Webfont: Dutch801BT-Roman by Bitstream
- * URL: https://www.myfonts.com/fonts/bitstream/dutch-801/std-roman-176138/
- * Copyright: Copyright 1990-2003 Bitstream Inc. All rights reserved.
- * 
- * Webfont: Dutch801BT-RomanHeadline by Bitstream
- * URL: https://www.myfonts.com/fonts/bitstream/dutch-801/std-headline-176138/
- * Copyright: Copyright 1990-2003 Bitstream Inc. All rights reserved.
+ * Webfont: TimesTenLT-Roman by Linotype
+ * URL: https://www.myfonts.com/fonts/linotype/times-ten/roman/
+ * Copyright: Part of the digitally encoded machine readable outline data for producing the Typefaces provided is copyrighted (c) 1988, 1990, 1993, 1995, 2003 Linotype Library GmbH, www.linotype.com. All rights reserved. This software is the property of Linotype Librar
  * 
  * Webfont: UniversLTPro-45Light by Linotype
  * URL: https://www.myfonts.com/fonts/linotype/univers/pro-45-light/
@@ -27,18 +23,14 @@
 
 
 /* @import must be at top of file, otherwise CSS will not work */
-@import url("//hello.myfonts.net/count/3d77db");
+@import url("//hello.myfonts.net/count/3d6cf1");
   
 @font-face {
   font-family: "UniversLTPro-45Light";
-  src: url('./webfonts/UniversLTPro45Light/font.woff2') format('woff2'), url('webFonts/UniversLTPro45Light/font.woff') format('woff');
+  src: url('./webfonts/UniversLTPro45Light/font.woff2') format('woff2'), url('./webfonts/UniversLTPro45Light/font.woff') format('woff');
 }
 @font-face {
-  font-family: "Dutch801BT-Roman";
-  src: url('./webfonts/Dutch801BTRoman/font.woff2') format('woff2'), url('webFonts/Dutch801BTRoman/font.woff') format('woff');
-}
-@font-face {
-  font-family: "Dutch801BT-RomanHeadline";
-  src: url('./webfonts/Dutch801BTRomanHeadline/font.woff2') format('woff2'), url('webFonts/Dutch801BTRomanHeadline/font.woff') format('woff');
+  font-family: "TimesTenLT-Roman";
+  src: url('./webfonts/TimesTenLTRoman/font.woff2') format('woff2'), url('./webfonts/TimesTenLTRoman/font.woff') format('woff');
 }
 
