--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -102,6 +102,7 @@ header {
   .menu-item {
     border-radius: 60px;
     display: none;
+    margin: 0 20px 0 0;
   }
   .menu-icon {
     padding: 0 !important;
@@ -140,19 +141,15 @@ header {
 
 // Footer
 footer {
-  padding: 20px 30px;
-  z-index: 1000;
-  bottom: 0;
-  left: 0;
+  margin: 120px 0 0;
   .link-menu {
     height: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
     flex-wrap: wrap;
-    a,
-    div {
-      margin: 10px;
+   .link-item {
+      margin: 0 20px 0 0;
       padding: 0 20px;
       height: 40px;
       border-radius: 20px;
@@ -166,9 +163,6 @@ footer {
         margin-top: 2px;
       }
     }
-    a {
-      display: none;
-    }
     .link-icon {
       cursor: pointer;
     }
@@ -180,82 +174,29 @@ footer {
 .content {
   margin: 140px 50px 40px;
   section {
-    &.head {
-      max-width: 880px;
-      margin-bottom: 30px;
-      img {
-        width: 100%;
-        max-width: 880px;
-        margin: 0 auto;
-      }
+    max-width: 100%;
+    margin-bottom: 30px;
+    text-align: center;
+    p {
+      margin: 0 0 30px;
+      max-width: 740px;
+      text-align: left;
     }
-    &.body {
+    img {
+      width: 100%;
       max-width: 880px;
-      p {
-        margin: 0 0 30px;
-        max-width: 700px;
-      }
-    }
-  }
-  .images {
-    grid-column: span 4;
-    margin: 20px 0 40px;
-    column-gap: 40px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    img,
-    video {
-      grid-column: span 3;
-      display: block;
       margin: 0 auto;
-      max-width: 100%;
+      background-color: #ececec;
       -webkit-filter: drop-shadow(0px 0px 6px rgba(0, 0, 0, 0.15));
       filter: drop-shadow(0px 0px 6px rgba(0, 0, 0, 0.15));
     }
-    h1 {
-      grid-column: span 3;
-      margin: 0 0 20px;
-    }
-    h3 {
-      margin: 30px 0 40px;
-      grid-column: span 3;
-      max-width: 100%;
+    h2 {
+      margin: 30px 0 90px;
+      text-align: center;
     }
   }
 }
 
-.info-block {
-  margin-top: auto;
-  grid-column: span 4;
-  column-gap: 40px;
-  display: grid;
-  grid-template-columns: minmax(200px, auto) 1fr 1fr 1fr 1fr;
-  .contact-block {
-    grid-column: span 1;
-    .contact-row {
-      display: flex;
-      flex-direction: row;
-      h3 {
-        display: block;
-        margin: 0;
-        &.label {
-          margin-right: 10px;
-          width: 30px;
-        }
-        a {
-          margin-right: 20px;
-          background-color: white;
-          box-shadow: none;
-          text-decoration: underline;
-          @include p(transition, all 200ms ease);
-          &:hover {
-            text-decoration: none;
-          }
-        }
-      }
-    }
-  }
-}
 
 @media (max-width: 800px) {
   body {
