--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -78,7 +78,7 @@ p {
 // Header
 
 header {
-  margin: 20px 50px;
+  margin: 20px;
   width: calc(100vw - 100px);
   position: fixed;
   z-index: 1000;
@@ -154,7 +154,7 @@ header {
 
 // Footer
 footer {
-  margin: 120px 50px 0;
+  margin: 120px 20px 0;
   .link-menu {
     height: 100%;
     display: flex;
@@ -185,9 +185,9 @@ footer {
 // Layout
 
 .content {
-  margin: 180px 60px 40px;
+  margin: 180px 40px 40px;
   section {
-    max-width: 100%;
+    max-width: 1000px;
     margin-bottom: 40px;
     text-align: center;
     p {
@@ -201,7 +201,7 @@ footer {
     }
     img, video {
       width: 100%;
-      max-width: 1000px;
+      // max-width: 1000px;
       margin: 30px auto 30px;
       -webkit-filter: drop-shadow(0px 0px 6px rgba(0, 0, 0, 0.15));
       filter: drop-shadow(0px 0px 6px rgba(0, 0, 0, 0.15));
