--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -31,8 +31,8 @@ h1 {
   font-weight: normal;
   line-height: 1.2em;
   letter-spacing: 0.025em;
-  text-align: center;
-  margin: 0 0 40px;
+  text-align: left;
+  margin: 0;
 }
 
 h2, .caption {
@@ -193,7 +193,7 @@ footer {
   margin: 180px 40px 40px;
   section {
     max-width: 1000px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     text-align: center;
     p {
       margin: 10px 0 20px;
