--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -6,8 +6,8 @@
 }
 
 @import "webfonts";
-$font-body: 22px;
-$font-head: 22px;
+$font-body: 24px;
+$font-head: 24px;
 $font-subhead: 16px;
 
 
@@ -16,7 +16,7 @@ body {
   color: #403C00;
   font-family: "SocialLight", -apple-system, BlinkMacSystemFont, Helvetica, Roboto, Arial, sans-serif;
   padding: 0;
-  margin: 20px 60px;
+  margin: 30px 60px;
   font-size: $font-body;
   line-height: 1.6em;
   padding: 0;
@@ -31,6 +31,7 @@ p {
 
 h1, h2 {
   font-size: $font-head;
+  text-align: center;
   font-weight: normal;
   line-height: 1.4em;
   margin: 0;
@@ -47,6 +48,19 @@ a {
   margin-top: 30px;
 }
 
+footer {
+  margin: 30px 60px;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  h1 {
+    margin: 0 20px;
+  }
+}
+
 .bg {
   position: fixed;
   z-index: -100;
@@ -54,5 +68,5 @@ a {
   left: 0;
   height: 100vh;
   width: 100vw;
-  background: center / cover no-repeat url(/assets/bg.jpeg);
+  background: center / cover no-repeat url(/assets/bg.jpg);
 }
