--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -7,8 +7,8 @@ body {
   color: #403C00;
   font-family: "SocialLight", -apple-system, BlinkMacSystemFont, Helvetica, Roboto, Arial, sans-serif;
   padding: 0;
-  margin: 20px 60px;
-  font-size: 22px;
+  margin: 30px 60px;
+  font-size: 24px;
   line-height: 1.6em;
   padding: 0;
   letter-spacing: 0.02em;
@@ -21,7 +21,8 @@ p {
 }
 
 h1, h2 {
-  font-size: 22px;
+  font-size: 24px;
+  text-align: center;
   font-weight: normal;
   line-height: 1.4em;
   margin: 0;
@@ -39,6 +40,24 @@ a:hover {
   margin-top: 30px;
 }
 
+footer {
+  margin: 30px 60px;
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+footer h1 {
+  margin: 0 20px;
+}
+
 .bg {
   position: fixed;
   z-index: -100;
@@ -46,6 +65,6 @@ a:hover {
   left: 0;
   height: 100vh;
   width: 100vw;
-  background: center/cover no-repeat url(/assets/bg.jpeg);
+  background: center/cover no-repeat url(/assets/bg.jpg);
 }
 /*# sourceMappingURL=home.css.map */
