--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -8,7 +8,7 @@ body {
   font-family: "SocialLight", -apple-system, BlinkMacSystemFont, Helvetica, Roboto, Arial, sans-serif;
   padding: 0;
   margin: 30px 60px;
-  font-size: 24px;
+  font-size: 22px;
   line-height: 1.6em;
   padding: 0;
   letter-spacing: 0.02em;
@@ -17,12 +17,12 @@ body {
 }
 
 p {
-  margin: 0;
+  margin: 0 60px;
 }
 
 h1, h2 {
-  font-size: 24px;
-  text-align: center;
+  font-size: 22px;
+  text-align: left;
   font-weight: normal;
   line-height: 1.4em;
   margin: 0;
@@ -46,16 +46,13 @@ footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   bottom: 0;
   left: 0;
   right: 0;
 }
 
 footer h1 {
-  margin: 0 20px;
+  margin: 0 40px 0 0;
 }
 
 .bg {
@@ -65,6 +62,6 @@ footer h1 {
   left: 0;
   height: 100vh;
   width: 100vw;
-  background: center/cover no-repeat url(/assets/bg.jpg);
+  background: center/cover no-repeat url(/assets/bg.jpeg);
 }
 /*# sourceMappingURL=home.css.map */
